CRUD operations on products DONE Implemented SyncFusion UI controler in Inventory Form

--- a/ElectronicShop.Persistence/ElectronicShop.Persistence.csproj
+++ b/ElectronicShop.Persistence/ElectronicShop.Persistence.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspose.BarCode" Version="22.9.0" />
+    <ProjectReference Include="..\ElectronicShop.Models\ElectronicShop.Models.csproj" />
   </ItemGroup>
 
 </Project>
