Implemented to show item order selled details deleted some innecesary classes Created mapper configurations libraries Added more desing to the view

--- a/Tienda-Electronica/ElectronicShop.View.csproj
+++ b/Tienda-Electronica/ElectronicShop.View.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ElectronicShop.Models\ElectronicShop.Models.csproj" />
     <ProjectReference Include="..\ElectronicShop.Persistence\ElectronicShop.Persistence.csproj" />
+    <ProjectReference Include="..\MapperConfigurations\ElectronicShop.MapperConfigurations.csproj" />
   </ItemGroup>
 
   <ItemGroup>
